--- a/pom.xml
+++ b/pom.xml
@@ -2720,6 +2720,21 @@
       </activation>
     </profile>
 
+    <profile>
+      <properties>
+        <harnessArgLine></harnessArgLine>
+      </properties>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+        <argLine>${harnessArgLine}  @{argLine} </argLine>
+        </configuration>
+      </plugin>
+    </profile>
+
   </profiles>
 
 </project>
