--- a/pom.xml
+++ b/pom.xml
@@ -304,6 +304,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
+          <argLine> @{argLine} </argLine>
           <argLine>${harnessArgLine}  @{argLine} </argLine>
           <systemPropertyVariables>
             <log4j.configuration>
